tests/ill_typed/struct2.mist
lazy Foo = Struct(a: Int, b: String)

def run(): Foo = Foo(3, 3)